--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1686,7 +1686,7 @@ banner
 }
 @media screen and (max-width: 992px) {
   .mil-banner .mil-banner-content {
-    padding-bottom: 90px;
+      margin-bottom: 90px;
   }
 }
 .mil-banner .mil-lines-place {
@@ -4238,7 +4238,7 @@ Responsive Banner Styles
 @media screen and (max-width: 1024px) {
   .mil-banner-content {
     margin-left: 0px !important;
-    padding: 0 40px !important;
+    padding: 0 40px 150px 40px !important;
     text-align: center !important;
     display: flex !important;
     flex-direction: column !important;
@@ -4288,7 +4288,7 @@ Responsive Banner Styles
 @media screen and (max-width: 768px) {
   .mil-banner-content {
     margin-left: 0px !important;
-    padding: 0 30px !important;
+    padding: 0 30px 120px 30px !important;
     text-align: center !important;
     display: flex !important;
     flex-direction: column !important;
@@ -4331,9 +4331,7 @@ Responsive Banner Styles
   }
 
   .mil-banner-content .mil-link {
-    margin-left: 15px !important;
-    font-size: 0.85rem !important;
-    font-weight: 500 !important;
+    display: none !important;
   }
 
   .mil-banner-content .row {
@@ -4355,7 +4353,7 @@ Responsive Banner Styles
 @media screen and (max-width: 600px) {
   .mil-banner-content {
     margin-left: 0px !important;
-    padding: 0 25px !important;
+    padding: 0 25px 100px 25px !important;
     text-align: center !important;
     display: flex !important;
     flex-direction: column !important;
@@ -4397,8 +4395,7 @@ Responsive Banner Styles
   }
 
   .mil-banner-content .mil-link {
-    font-size: 0.8rem !important;
-    font-weight: 500 !important;
+    display: none !important;
   }
 
   .mil-banner-content .row {
@@ -4420,7 +4417,7 @@ Responsive Banner Styles
 @media screen and (max-width: 480px) {
   .mil-banner-content {
     margin-left: 0px !important;
-    padding: 0 20px !important;
+    padding: 0 20px 80px 20px !important;
     text-align: center !important;
     display: flex !important;
     flex-direction: column !important;
@@ -4464,9 +4461,7 @@ Responsive Banner Styles
   }
 
   .mil-banner-content .mil-link {
-    margin-left: 12px !important;
-    font-size: 0.8rem !important;
-    font-weight: 500 !important;
+    display: none !important;
   }
 
   .mil-banner-content .row {
@@ -4488,7 +4483,7 @@ Responsive Banner Styles
 @media screen and (max-width: 375px) {
   .mil-banner-content {
     margin-left: 0px !important;
-    padding: 0 15px !important;
+    padding: 0 15px 70px 15px !important;
     text-align: center !important;
     display: flex !important;
     flex-direction: column !important;
@@ -4525,7 +4520,7 @@ Responsive Banner Styles
   }
 
   .mil-banner-content .mil-link {
-    font-size: 0.75rem !important;
+    display: none !important;
   }
 
   .mil-banner-content .row {
