--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1216,35 +1216,29 @@ frame
 }
 
 .mil-frame {
-  padding: 50px 60px 60px 60px;
+  padding: 20px 25px;   /* smaller than 50px 60px */
   position: fixed;
   z-index: 2;
   pointer-events: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
 }
+
+/* 🔥 Mobile & Tablet — make navbar smaller */
 @media screen and (max-width: 1200px) {
   .mil-frame {
-    padding: 30px;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .mil-frame {
-    padding: 0;
+    height: 40px;      /* smaller navbar */
+    padding: 8px 8px; /* smaller padding */
     z-index: 999;
-    height: 90px;
   }
 }
+
+
+
+
 @media screen and (max-width: 1200px) {
   .mil-frame .mil-frame-top {
     height: 90px;
